# sysmon-widget-win

./: .gitignore  CMakeLists.txt  README.md  SysmonWidget.spec  app_settings.py  build-exe.ps1  build-native.ps1  config.py  main.py  requirements.txt  settings_dialog.py  sysmon_widget.py  test.ps1  tray_app.py  version_info.txt  widget.py
packaging/: README.md
packaging/linux/: build-deb.sh  run-widget.sh  sysmon-widget.desktop
panels/: clock.py  music.py  network.py  process.py  storage.py  sysstat.py  weather.py
src/native/: README.md  app.rc  brightness_poller.cpp  brightness_poller.h  main.cpp  music_poller.cpp  music_poller.h  process_poller.cpp  process_poller.h  process_sampler.cpp  process_sampler.h  renderer.cpp  renderer.h  settings_dialog.cpp  settings_dialog.h  temperature_poller.cpp  temperature_poller.h  weather_fetcher.cpp  weather_fetcher.h  widget_app.cpp  widget_app.h
tools/: make_icon.ps1
utils/: autostart.py  bar_meter.py  ring_gauge.py  sparkline.py  ui.py  win_hints.py  window_shape.py  xlib_hints.py
